2011-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-spec.el (gnus-lrm-string): Use 8206 instead of ?\x200e to make
	things work in Emacs 22 and XEmacs, too.

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups): LRM-ify the
	default From.

	* gnus-spec.el (gnus-lrm-string-p): New macro.
	(gnus-lrm-string): New constant.
	(gnus-summary-line-format-spec): LRM-ify the from.
	(gnus-tilde-max-form): LRM-ify string chopping.

	* gnus-ems.el (gnus-string-mark-left-to-right): New function.

	* message.el (message-is-yours-p): Allow disabling canlock checking
	(bug#9295).
	(message-shoot-gnksa-feet): Add `canlock-verify'.
	(message-auto-save-directory): Use ~/ as the auto-save directory if the
	message directory isn't writable (bug#9304).

	* auth-source.el (auth-source-netrc-saver): Make the .authinfo file
	non-world-readable.

2011-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nndraft.el (nndraft-update-unread-articles): Don't send delayed
	articles.

2011-08-13  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-score.el (gnus-all-score-files): Use copy-sequence instead of
	copy-list.

2011-08-12  Sam Steingold  <sds@gnu.org>

	* gnus-score.el (gnus-score-find-alist): Keep the score files already
	in the reverse order to avoid modifying the cache with `nreverse'.
	(gnus-all-score-files): Do not modify the value returned by
	`gnus-score-find-alist' because it lives in a cache variable.
	(gnus-current-home-score-file): No need to `nreverse' the return value
	of `gnus-score-find-alist', it is already in the correct order.

2011-08-11  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-transform-headers): BODYSTRUCTURE for messages of
	type MESSAGE and subtype RFC822 is slightly different from those of
	type TEXT.

2011-08-05  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-refer-article): Warp to article. This
	allows article-referral to work from an nnir group.

2011-08-04  Andrew Cohen  <cohen@andy.bu.edu>
