@@ -604,9 +604,7 @@ Other back ends might or might not work.")
 
 ;; Silence byte-compiler.
 (defvar gnus-registry-install)
-(autoload 'gnus-registry-fetch-group "gnus-registry")
-(autoload 'gnus-registry-fetch-groups "gnus-registry")
-(autoload 'gnus-registry-add-group "gnus-registry")
+(autoload 'gnus-registry-get-id-key "gnus-registry")
 
 (deffoo nnmairix-request-set-mark (group actions &optional server)
   (when server
@@ -660,13 +658,7 @@ Other back ends might or might not work.")
 			      nnmairix-only-use-registry)
 		    (setq ogroup
 			  (nnmairix-determine-original-group-from-path
-			   mid nnmairix-current-server))
-		    ;; if available and allowed, add this entry to the registry
-		    (when (and (boundp 'gnus-registry-install)
-			       gnus-registry-install)
-		      (dolist (cur ogroup)
-			(unless (gnus-parameter-registry-ignore cur)
-			  (gnus-registry-add-group mid cur)))))
+			   mid nnmairix-current-server)))
 		  (unless ogroup
 		    (nnheader-message
 		     3 "Unable to set mark: couldn't find original group for %s" mid)
@@ -1630,14 +1622,7 @@ search in raw mode."
 	;; registry was not available or did not find article
 	;; so we search again with mairix in raw mode to get filename
 	(setq allgroups
-	      (nnmairix-determine-original-group-from-path mid server))
-	;; if available and allowed, add this entry to the registry
-	(when (and (not no-registry)
-		   (boundp 'gnus-registry-install)
-		   gnus-registry-install)
-	  (dolist (cur allgroups)
-	    (unless (gnus-parameter-registry-ignore cur)
-	      (gnus-registry-add-group mid cur)))))
+	      (nnmairix-determine-original-group-from-path mid server)))
       (if (> (length allgroups) 1)
 	  (setq group
 		(gnus-completing-read
@@ -1657,7 +1642,7 @@ search in raw mode."
       (set mid (concat "<" mid)))
     (unless (string-match ">$" mid)
       (set mid (concat mid ">")))
-    (gnus-registry-fetch-groups mid)))
+    (gnus-registry-get-id-key mid 'group)))
 
 (defun nnmairix-determine-original-group-from-path (mid server)
   "Determine original group(s) for message-id MID from the file path.
