@@ -1,3 +1,12 @@
+2011-08-18  David Engster  <dengste@eml.cc>
+
+	* nnmairix.el (nnmairix-request-set-mark)
+	(nnmairix-goto-original-article): Remove adding of article to registry,
+	since `gnus-registry-add-group' isn't available anymore.
+	(nnmairix-determine-original-group-from-registry): Use
+	`gnus-registry-get-id-key' since `gnus-registry-fetch-groups' isn't
+	available anymore.
+
 2011-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-spec.el (gnus-lrm-string): Use 8206 instead of ?\x200e to make
